# place-random

./: .rustfmt.toml  Cargo.toml  README.md  justfile  spin.toml
.github/workflows/: release.yml
src/: lib.rs
