[package]
name = "place-random"
authors = ["Seungjin Kim <seungjin@seungjin.net>"]
description = "sky.seungjin.net/random-place"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
rand = "0.9.0"
serde = "1.0.219"
serde-hjson = "1.1.0"
serde_json = "1.0.140"
# The Spin SDK.
spin-sdk = { git = "https://github.com/spinframework/spin-rust-sdk", branch = "main" }



[workspace]
